Update source files to use more modern approaches to creating instance and general clean up.
Updated tests to no longer use Netty and use Jetty instead to get servlet support.

Signed-off-by: James R. Perkins <jperkins@ibm.com>